app/src/main/java/com/example/truckercore/shared/errors/IllegalQueryParametersException.kt
package com.example.truckercore.shared.errors

class IllegalQueryParametersException(message: String): Exception(message)